Layout changes & Online song search & download implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,11 @@
             android:process=":main" />
 
         <service
+            android:name=".freemp3.DownloadService"
+            android:label="@string/app_name"
+            android:process=":main" />
+
+        <service
             android:name=".WearBrowserService"
             android:exported="true">
             <intent-filter>
